# restaurant

./: .gitignore  .travis.yml  ChangeLog  Gemfile  Gemfile.in  Makefile  Makefile.in  README.md  Restaurant.desktop.in  autobuild.sh  bootstrap.el  bootstrap.sh  configure.ac  envinstall.sh  index.html  init.el  params.json  restaurant  restaurant.in
data/: Gemfile.12  Gemfile.13  minimize.xpm  one.xpm  restaurant.desktop  restaurant.desktop.in  terminal.xpm  vsplit.xpm
data/icons/: .directory  hsplit.xpm
data/icons/source/: mono.xpm
data/themes/: restaurant-atomic-theme.el  restaurant-classic-theme.el  restaurant-lite-theme.el  restaurant-theme.el
doc/: CI.md  FAQ.md  cheatSheet.md  general.md  github.md  installation.md  knownIssues.md  markdown.md  project.md  restaurant.info
rc/: chef.el  codebrowser.el  common.el  company.el  ecb.el  erb.el  face.el  fly.el  json.el  kitchen.el  markdown.el  menubar.el  popup-menu.el  rspec.el  ruby.el  rvm.el  theme.el  toolbar.el  user-directories.el  version.el  web.el  yaml.el  yasnippet.el
scripts/: Gemfile  build_all  chef.sh  common.sh  config.in  emacs.sh  git.sh  include.in  install_all  ruby.sh  tmpl.sh  transient.sh  yasnippet.sh
src/: bootstrap.el  bundler.el  codebrowser.el  common.el  fly.el  foodcritic.el  restaurant-berkshelf.el  restaurant-bundler.el  restaurant-chef.el  restaurant-codebrowser.el  restaurant-common.el  restaurant-company.el  restaurant-custom.el  restaurant-erb.el  restaurant-fly.el  restaurant-foodcritic.el  restaurant-git.el  restaurant-helm.el  restaurant-help.el  restaurant-json.el  restaurant-kitchen.el  restaurant-lib.el  restaurant-markdown.el  restaurant-menubar.el  restaurant-popup-menu.el  restaurant-rspec.el  restaurant-ruby.el  restaurant-rvm.el  restaurant-shell-script.el  restaurant-tabbar.el  restaurant-theme.el  restaurant-toolbar.el  restaurant-user-directories.el  restaurant-version.el  restaurant-web.el  restaurant-yaml.el  restaurant-yasnippet.el  restaurant.el  ruby.el  web.el  (+1 more)
test/: .kitchen.yml  metadata.rb
test/attributes/: default.rb
test/providers/: default.rb
test/recipes/: default.rb
test/resources/: default.rb
test/templates/default/: restaurant.conf.erb
themes/: restaurant-theme.el
